objects/tspa__NotificationsFromTechsee__c.object
<CustomObject>
    <fields>
        <fullName>tspa__Accuracy_Level__c</fullName>
        <label>Accuracy Level</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__ClientLoaded__c</fullName>
        <label>ClientLoaded</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tspa__Coordinates__c</fullName>
        <label>Coordinates</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>tspa__Image_File_Name__c</fullName>
        <label>Image File Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Image_Link__c</fullName>
        <label>Image Link</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Link_to_Google_Map__c</fullName>
        <label>Link to Google Map</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tspa__Location__c</fullName>
        <label>Location</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tspa__OCRType__c</fullName>
        <label>OCRType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Barcode</fullName>
                </value>
                <value>
                    <fullName>QR Code</fullName>
                </value>
                <value>
                    <fullName>text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tspa__OCRValue__c</fullName>
        <label>OCRValue</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tspa__OCR_Result_Type__c</fullName>
        <label>OCR Result Type</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__OCR_Result_Value__c</fullName>
        <label>OCR Result Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tspa__OSVersion__c</fullName>
        <label>OSVersion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__OS__c</fullName>
        <label>OS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Reference_Number__c</fullName>
        <label>Reference Number</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__TechSee_Customer_Details__c</fullName>
        <label>TechSee_Customer_Details</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tspa__TechSee_SMS_Status__c</fullName>
        <label>TechSee_SMS_Status</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tspa__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>smsDeliveryStatus</fullName>
                </value>
                <value>
                    <fullName>customerDetails</fullName>
                </value>
                <value>
                    <fullName>sessionEnded</fullName>
                </value>
                <value>
                    <fullName>customerGeolocation</fullName>
                </value>
                <value>
                    <fullName>imageScanResults</fullName>
                </value>
                <value>
                    <fullName>desktopSharingStatus</fullName>
                </value>
                <value>
                    <fullName>tosRejected</fullName>
                </value>
                <value>
                    <fullName>mirroringStatus</fullName>
                </value>
                <value>
                    <fullName>observerInviteStatus</fullName>
                </value>
                <value>
                    <fullName>audioStatus</fullName>
                </value>
                <value>
                    <fullName>mediaAccess</fullName>
                </value>
                <value>
                    <fullName>videoStatus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tspa__VJFlowName__c</fullName>
        <label>VJ Flow Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tspa__address__c</fullName>
        <label>address</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tspa__agentUsername__c</fullName>
        <label>Agent Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__appName__c</fullName>
        <label>appName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__audio_event__c</fullName>
        <label>audio event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__base64Img__c</fullName>
        <label>base64Img</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tspa__coordinateAcc__c</fullName>
        <label>coordinateAcc</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tspa__coordinateGoogleMapLink__c</fullName>
        <label>coordinateGoogleMapLink</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tspa__coordinate__c</fullName>
        <label>coordinate</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tspa__desktopSharing_event__c</fullName>
        <label>desktopSharing event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__googleMapsLink__c</fullName>
        <label>googleMapsLink</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tspa__imageName__c</fullName>
        <label>imageName</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__mediaAccess_status__c</fullName>
        <label>Media Access Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__media_type__c</fullName>
        <label>Media Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__mirroringType__c</fullName>
        <label>mirroringType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__mirroring_event__c</fullName>
        <label>mirroring event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__observer_firstName__c</fullName>
        <label>observer firstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__observer_lastName__c</fullName>
        <label>observer lastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__observer_status__c</fullName>
        <label>observer status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__requestID__c</fullName>
        <label>requestID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__resources__c</fullName>
        <label>resources</label>
        <length>25000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tspa__sessionEndedBy__c</fullName>
        <label>sessionEndedBy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>agent</fullName>
                </value>
                <value>
                    <fullName>customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tspa__sessionID__c</fullName>
        <label>sessionID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__timestamp__c</fullName>
        <label>timestamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__video_status__c</fullName>
        <label>Video Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Visual Remote Assistant - Sessions Event</label>
    <listViews>
        <fullName>tspa__All</fullName>
        <columns>NAME</columns>
        <columns>tspa__sessionID__c</columns>
        <columns>tspa__Type__c</columns>
        <columns>tspa__TechSee_SMS_Status__c</columns>
        <columns>tspa__timestamp__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NFT-{0000000000}</displayFormat>
        <label>NotificationsFromTechsee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visual Remote Assistant - Sessions Event</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>